<resources>
    <string name="app_name">Math Drills</string>
    <string name="app_name_upper">MATH DRILLS</string>

    <string name="lbl_casual">Casual</string>
    <string name="lbl_timer_60">60 Seconds</string>
    <string name="lbl_timer_180">180 Seconds</string>

    <string name="lbl_timer">Timer</string>
    <string name="lbl_operation">Operation</string>
    <string name="lbl_difficulty">Difficulty</string>
    <string name="lbl_high_score">High Score</string>
    <string name="lbl_attempts_remaining">Attempts Left</string>
    <string name="lbl_score">Score</string>

    <string name="lbl_addition">Addition</string>
    <string name="lbl_subtraction">Subtraction</string>
    <string name="lbl_multiplication">Multiplication</string>
    <string name="lbl_division">Division</string>

    <string name="lbl_beginner">Beginner</string>
    <string name="lbl_easy">Easy</string>
    <string name="lbl_intermediate">Intermediate</string>
    <string name="lbl_hard">Hard</string>
    <string name="lbl_whiz">Math Whiz</string>
    <string name="lbl_next_button">Next</string>
    <string name="lbl_prev_button">Previous</string>

    <string name="lbl_play">PLAY</string>
    <string name="lbl_start">START</string>

    <string name="home_button">Home</string>
    <string name="quit_button">Quit</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="try_again">Try Again</string>
    <string name="answer">Answer</string>
    <string name="time_up">Time\'s up!</string>

    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_0">0</string>
    <string name="ltr_c">Clear</string>
    <string name="pos_neg">+/-</string>
    <string name="submit">Submit</string>
    <string name="backspace">Backspace</string>

    <string name="alert_title">Are you sure you want to quit?</string>

    <string name="countdown_timer">%1$s:%2$s</string>
    <string name="number">%1$d</string>
    <string name="words">%1$s</string>
    <string name="results">%1$s\n%2$s\n%3$s\n\nSCORE: %4$d</string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="test_interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6094292382546099/2612865985</string>
</resources>