<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/blackopsone_regular"
        android:gravity="center"
        android:text="@string/app_name_upper"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anonymouspro_regular"
        android:gravity="center"
        android:text="@string/words"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_lbl_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/blackopsone_regular"
        android:text="@string/lbl_timer"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_Version" />

    <LinearLayout
        android:id="@+id/ll_Timers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/tv_lbl_timer">

        <ImageButton
            android:id="@+id/btn_Casual"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_casual"
            android:contentDescription="@string/lbl_casual" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_60"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_60_seconds"
            android:contentDescription="@string/lbl_timer_60" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_180"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_180_seconds"
            android:contentDescription="@string/lbl_timer_180" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_lbl_operation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/blackopsone_regular"
        android:text="@string/lbl_operation"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/ll_Timers" />

    <LinearLayout
        android:id="@+id/ll_Operations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/tv_lbl_operation">

        <ImageButton
            android:id="@+id/btn_op_addition"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_addition"
            android:contentDescription="@string/lbl_addition"
            android:textSize="16sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_op_subtraction"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_subtraction"
            android:contentDescription="@string/lbl_subtraction"
            android:textSize="16sp" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/btn_op_multiplication"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/btn_multiplication"
            android:contentDescription="@string/lbl_multiplication"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_lbl_difficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/blackopsone_regular"
        android:text="@string/lbl_difficulty"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/ll_Operations" />

    <LinearLayout
        android:id="@+id/ll_Difficulty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start"
        app:layout_constraintTop_toBottomOf="@id/tv_lbl_difficulty"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_prev_difficulty"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_left_arrow"/>

        <TextView
            android:id="@+id/tv_Difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/blackopsone_regular"
            android:gravity="center"
            android:text="@string/words"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_next_difficulty"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_right_arrow"
            android:contentDescription="TODO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_start"
        app:layout_constraintEnd_toEndOf="@id/btn_start"
        app:layout_constraintStart_toStartOf="@id/btn_start">

        <TextView
            android:id="@+id/tv_High_Score_Lbl"
            android:layout_width="108dp"
            android:layout_height="88dp"
            android:background="@drawable/circle"
            android:fontFamily="@font/anonymouspro_regular"
            android:gravity="center"
            android:text="@string/number"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Attempts_Lbl"
            android:layout_width="108dp"
            android:layout_height="88dp"
            android:background="@drawable/heart"
            android:fontFamily="@font/anonymouspro_regular"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/btn_play"
        android:contentDescription="@string/lbl_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>